force-app/main/default/objects/Salesforce_PS_Project_Created__e/Salesforce_PS_Project_Created__e.object-meta.xml
<CustomObject>
    <description>MKT26-669: Platform event to publish to create PS project on Asana</description>
    <label>Salesforce PS Project Created</label>
    <pluralLabel>Salesforce PS Project Created</pluralLabel>
</CustomObject>