force-app/main/default/objects/Salesforce_PS_Project_Created__e/fields/Asana_Project_Id__c.field-meta.xml
<CustomField>
    <fullName>Asana_Project_Id__c</fullName>
    <description>This is for sending existing asana project Id</description>
    <label>Asana Project Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>