force-app/main/default/objects/Salesforce_PS_Project_Created__e/fields/Order_Product_Summary__c.field-meta.xml
<CustomField>
    <fullName>Order_Product_Summary__c</fullName>
    <description>Order Product Data, json in the form of &lt;sku&gt;&lt;/sku&gt;&lt;name&gt;task type - task label&lt;name&gt;&lt;quantity&gt;&lt;/quantity&gt;&lt;term&gt;&lt;/term&gt;</description>
    <label>Order Product Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>