force-app/main/default/objects/Salesforce_PS_Project_Created__e/fields/Project_Id__c.field-meta.xml
<CustomField>
    <fullName>Project_Id__c</fullName>
    <label>Project Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>