force-app/main/default/objects/Salesforce_PS_Project_Created__e/fields/Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Name__c</fullName>
    <description>Name of the project, to be mapped to Name of the project on Asana</description>
    <label>Project Name</label>
    <length>160</length>
    <type>Text</type>
</CustomField>