force-app/main/default/objects/Salesforce_PS_Project_Created__e/fields/Project_Owner__c.field-meta.xml
<CustomField>
    <fullName>Project_Owner__c</fullName>
    <description>Name of the project Manager, to be mapped to Project Owner in Asana</description>
    <label>Project Owner</label>
    <length>50</length>
    <type>Text</type>
</CustomField>