force-app/main/default/objects/Salesforce_PS_Project_Created__e/fields/Project_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Project_Owner_Email__c</fullName>
    <label>Project Owner Email</label>
    <length>50</length>
    <type>Text</type>
</CustomField>