force-app/main/default/objects/Salesforce_PS_Project_Created__e/fields/Welcome_Letter_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Letter_Contact_Name__c</fullName>
    <description>Welcome Letter Contact Name, to be mapped to Contact Name in Asana</description>
    <label>Welcome Letter Contact Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>